monitoring/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: production
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: $MY_UID
        runAsGroup: $MY_UID
        fsGroup: $MY_UID
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: state
              mountPath: /var/lib/grafana
              subPath: grafana/data
            - name: state
              mountPath: /etc/grafana/provisioning
              subPath: grafana/provisioning
          securityContext:
            allowPrivilegeEscalation: false
            seLinuxOptions:
              type: spc_t # SELinux doesn't play well with K8s PVCs
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: monitoring-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: production
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
