monitoring/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: production
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        runAsUser: $MY_UID
        runAsGroup: $MY_UID
        fsGroup: $MY_UID
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          args: ["--config.file=/config/prometheus.yaml", "--storage.tsdb.path=/prometheus", "--storage.tsdb.retention.size=512MB"]
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /config/prometheus.yaml
              subPath: prometheus.yaml
            - name: state
              mountPath: /prometheus
              subPath: prometheus
          securityContext:
            allowPrivilegeEscalation: false
            seLinuxOptions:
              type: spc_t # SELinux doesn't play well with K8s PVCs
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: monitoring-pvc
        - name: config
          configMap:
            name: prometheus-config
            items:
              - key: prometheus.yaml
                path: prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: production
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
